--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,11 @@ body{
 }
 
 h1{
-  padding: 100px;
+  margin: 100px;
+  padding: 50px;
   font-size: 40pt;
+  border-radius: 100px;
+  background-color: antiquewhite;
 }
 
 #clock{
